--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,10 @@
 variables: secrets.yml
+
+web_server:
+  bind: 0.0.0.0
+  port: 3539
+  web_ui: yes
+
 schedules:
 ##### YOUR TORRENT CLIENT SHOULD RUN THIS COMMAND AFTER EVERY DOWNLOAD: PATH_TO_flexget/bin/flexget execute --tasks find-* move-*
 ##### Alternatively uncomment this task to process downloaded files every 30min.
